fixed the logic behind thought cards and the overlapping issue of the footer

--- a/css/detail.css
+++ b/css/detail.css
@@ -141,6 +141,7 @@ nav {
 
 .footer {
     width: 100%;
+    float: left;
     border-top: 1px solid #e2e2e2;
     padding: 50px 5px 0px 5px;
     margin-bottom: 50px;
